@@ -1,15 +1,18 @@
-OPTDIRS = drivers
+
+OPTDIRS =
 
 if CONFIG_RTAI_CPLUSPLUS
 OPTDIRS += cpp
+endif
+
+if CONFIG_RTAI_RTDM
+OPTDIRS += rtdm
 endif
 
 if CONFIG_RTAI_COMEDI_LXRT
 OPTDIRS += comedi
 endif
 
-if CONFIG_RTAI_RTDM
-OPTDIRS += rtdm
-endif
+OPTDIRS += drivers
 
 SUBDIRS = $(OPTDIRS)
