@@ -34,6 +34,7 @@ rtai_rtdm$(modext): $(librtdm_a_SOURCES) FORCE
 
 clean-local:
 	@RTAI_KBUILD_CLEAN@
+	rm -f FORCE
 
 distclean-local:
 	@RTAI_KBUILD_DISTCLEAN@
