@@ -64,8 +64,8 @@ RECURSIVE_TARGETS = all-recursive check-recursive dvi-recursive \
 	uninstall-recursive
 ETAGS = etags
 CTAGS = ctags
-DIST_SUBDIRS = include ipc trace math malloc tasklets usi wd leds \
-	sched arch scripts posix
+DIST_SUBDIRS = include sched ipc arch posix trace math malloc tasklets \
+	usi wd leds scripts
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = @ACLOCAL@
 AMDEP_FALSE = @AMDEP_FALSE@
@@ -346,7 +346,7 @@ target_alias = @target_alias@
 OPTDIRS = $(am__append_1) $(am__append_2) $(am__append_3) \
 	$(am__append_4) $(am__append_5) $(am__append_6) \
 	$(am__append_7)
-SUBDIRS = include ipc $(OPTDIRS) sched arch scripts posix
+SUBDIRS = include sched ipc arch posix $(OPTDIRS) scripts
 EXTRA_DIST = config
 all: all-recursive
 
