@@ -37,13 +37,13 @@ build_triplet = @build@
 host_triplet = @host@
 @CONFIG_RTAI_BITS_TRUE@am__append_1 = bits
 @CONFIG_RTAI_FIFOS_TRUE@am__append_2 = fifos
-@CONFIG_RTAI_NETRPC_TRUE@am__append_3 = netrpc
-@CONFIG_RTAI_SHM_TRUE@am__append_4 = shm
-@CONFIG_RTAI_SEM_TRUE@am__append_5 = sem
-@CONFIG_RTAI_MSG_TRUE@am__append_6 = msg
-@CONFIG_RTAI_MBX_TRUE@am__append_7 = mbx
-@CONFIG_RTAI_TBX_TRUE@am__append_8 = tbx
-@CONFIG_RTAI_MQ_TRUE@am__append_9 = mq
+@CONFIG_RTAI_SHM_TRUE@am__append_3 = shm
+@CONFIG_RTAI_SEM_TRUE@am__append_4 = sem
+@CONFIG_RTAI_MSG_TRUE@am__append_5 = msg
+@CONFIG_RTAI_MBX_TRUE@am__append_6 = mbx
+@CONFIG_RTAI_TBX_TRUE@am__append_7 = tbx
+@CONFIG_RTAI_MQ_TRUE@am__append_8 = mq
+@CONFIG_RTAI_NETRPC_TRUE@am__append_9 = netrpc
 subdir = base/ipc
 DIST_COMMON = $(srcdir)/GNUmakefile.am $(srcdir)/GNUmakefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -66,7 +66,7 @@ RECURSIVE_TARGETS = all-recursive check-recursive dvi-recursive \
 	uninstall-recursive
 ETAGS = etags
 CTAGS = ctags
-DIST_SUBDIRS = bits fifos netrpc shm sem msg mbx tbx mq
+DIST_SUBDIRS = bits fifos shm sem msg mbx tbx mq netrpc
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = @ACLOCAL@
 AMDEP_FALSE = @AMDEP_FALSE@
